--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Scholar - Online School HTML5 Template</title>
+    <title>Anastasiia's Final Project NM2207</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
-TemplateMo 586 Scholar
+Template taken from
 
 https://templatemo.com/tm-586-scholar
 
@@ -60,9 +60,9 @@ https://templatemo.com/tm-586-scholar
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                       <li class="scroll-to-section"><a href="#top" class="active">My Big Idea</a></li>
-                      <li class="scroll-to-section"><a href="#services">Background</a></li>
-                      <li class="scroll-to-section"><a href="#courses">Data</a></li>
-                      <li class="scroll-to-section"><a href="#team">Findings</a></li>
+                      <li class="scroll-to-section"><a href="#background">Background</a></li>
+                      <li class="scroll-to-section"><a href="#datainfo">Data</a></li>
+                      <li class="scroll-to-section"><a href="#findings">Findings</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -85,37 +85,19 @@ https://templatemo.com/tm-586-scholar
                 <span class="category">Big Idea</span>
                 <h2>No perks of being a wallflower</h2>
                 <p> Students should not be afraid to invest time into their personal lives. Building and having strong family and romatic relatinship can benefit the academic success and provide additional support during hard times.  </p>
-                <div class="buttons">
-                  <div class="main-button">
-                    <a href="#PS">Problem Statement</a>
-                    <p>The button for some reason doesn't work, even though I have lonked it the id of the next slide</p>
-                  </div>
-                </div>
               </div>
             </div>
-            <div class="item item-2" id = "PS">
-              <div class="header-text">
-                <span class="category">Problem Statement</span>
-                <h2>Students' misperception that active social life always negatively affects academic life</h2>
-                <p> The goal of this study is to prove the opposite</p>
-                <div class="buttons">
-                  <div class="main-button">
-                    <a href="#">Go to findings</a>
-                  </div>
-              </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
 
-  <div class="services section" id="services">
+  <div class="background section" id="background">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-01.png" alt="online degrees">
+              <img src="assets/images/researchaim.png" alt="aim">
             </div>
             <div class="main-content">
               <h4>Aim</h4>
@@ -127,22 +109,23 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-02.png" alt="short courses">
+              <img src="assets/images/researchgap.png" alt="short courses">
             </div>
             <div class="main-content">
               <h4>Research gap</h4>
-              <p> Most academic literature focuses on the negative effect of romantic relationships on academic performance. However,a few novel studies have emphasized the positive impact interpersonal factors may have on academic success of the student. </p>
+              <p> Most academic literature focuses on the negative effect of romantic relationships on academic performance. However, a few novel studies have emphasized the positive impact interpersonal factors may have on academic success of the student. </p>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
           <div class="service-item">
             <div class="icon">
-              <img src="assets/images/service-03.png" alt="web experts">
+              <img src="assets/images/icons8-broken-heart-64.png" alt="problem statement">
             </div>
             <div class="main-content">
-              <h4>Personal observations</h4>
-              <p>'You know, I'll pass tonight'. <br> Since I came to NUS, I heard a lot of students saying similar phrases, refusing to go out with friends for the sake of studying, missing out on some wonderful evenings.</p>
+              <h4>Problem Statement</h4>
+              <p> Students' misperception that personal life negatively affects academic life.
+                The goal of this study is to prove the opposite. </p>
             </div>
           </div>
         </div>
@@ -150,10 +133,10 @@ https://templatemo.com/tm-586-scholar
     </div>
   </div>
 
-  <div class="section about-us">
+  <div class="section datainfo" id="datainfo">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 offset-lg-1">
+        <div class="col-lg-6">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -163,14 +146,14 @@ https://templatemo.com/tm-586-scholar
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  The measure academic success of student I chose the variable G3. This variable represents the <strong> final average grade for two periods</strong> . The grade scale is from 1 to 20 points.
+                  The measure academic success of student is the variable G3. This variable represents the <strong> final average grade for two periods</strong> . The grade scale is from 1 to 20 points.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Categorical Independent Variables
+                  Categorical Independent Variable
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -182,13 +165,24 @@ https://templatemo.com/tm-586-scholar
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Numerical Independent Variables
+                  Numerical Independent Variable 1
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  In this project I used three numerical predictors. <strong>Going out with friends</strong> measured the frequency on a 5 point Likert scale (1 - very low to 5 - very high).  <strong>Family relationship quality</strong> uses 5-point scale from 1 - very bad to 5 - excellent relationships.
+                  <strong>Going out with friends</strong> measured the frequency on a 5 point Likert scale (1 - very low to 5 - very high).  
                 </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  Numerical Independent Variable 2
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Family relationship quality</strong> uses 5-point scale from 1 - very bad to 5 - excellent relationships.
                 </div>
               </div>
             </div>
@@ -196,8 +190,8 @@ https://templatemo.com/tm-586-scholar
         </div>
         <div class="col-lg-5 align-self-center">
           <div class="section-heading">
-            <h6>The Data</h6>
-            <h2>Which data did I use to test my hypotheses?</h2>
+            <h6>Meta data information</h6>
+            <h2>The provenance of the data</h2>
             <p>The data for this project was taken from the open data source Kaggle.com.  <br> The dataset contains information from 382 secondary school students in Portugal during academic year 2005-2006.</p>
             <div class="main-button">
               <a href="https://www.kaggle.com/datasets/uciml/student-alcohol-consumption">Go to data source</a>
@@ -208,16 +202,35 @@ https://templatemo.com/tm-586-scholar
     </div>
   </div>
 
-  <section class="section courses" id="courses" >
+
+
+  <section class="section courses" id="findings" >
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="text-center">
           <div class="section-heading">
             <h6>Results</h6>
             <h2>My findings</h2>
-            <p>Here I am going to show my data visualizations</p>
           </div>
         </div>
+
+          <div id="regression"></div><!-- Plotly chart will be drawn inside this DIV --></div>
+          <br>
+          <p> On this graph, you can see that the better the relationship between the student and the family is, the higher are the student's marks. 
+            Therefore, good relations with your siblings and parents have a significant positive effect on your GPAs (p < 0.01). </p>
+          <br>
+          <div id="moderation"></div><!-- The second Plotly chart can be drawn inside this DIV --></div>
+          <br>
+          <p> The plot above shows the interaction effect of family relatinship and the presence of romatic relationship (e.g. dating) on the students' GPA.
+             The main take-away from this visualization is that in case of poor relationship with the family, the romantic relationship can compensate the lacking support: the average grade of dating students is 2 points higher than of the student without romantic relationship, holding the poor family relatinship for constant. </p>
+          <br>
+          <br>
+          <p> The third linechart below visualizes the effect of going out frequency on the students' average marks. 
+            The variables have a significant negative linear relationship, meaning that the more often one goes out with friends, the lower are their marks (p < 0.01). </p>
+          <br>
+          <div id="regression2"></div><!-- The third Plotly chart will be drawn inside this DIV --></div>
+         
+          <div id="checkcheck"></div>
       </div>
 
   
@@ -237,6 +250,9 @@ https://templatemo.com/tm-586-scholar
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script defer type="text/javascript" src="assets/js/findings.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 
   </body>
 </html>
